--- a/style.css
+++ b/style.css
@@ -4,10 +4,10 @@
   --bianco: #ffffff;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+html, body {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 body {
@@ -44,6 +44,10 @@ nav ul li a {
 
 nav ul li a:hover {
   color: var(--rosso);
+}
+
+main {
+  flex: 1;
 }
 
 .hero {
